Fix grid spacing

--- a/styles/grid.scss
+++ b/styles/grid.scss
@@ -87,16 +87,17 @@ body {
 	pointer-events: none;
 }
 
-.button-7, .button-8, .button-9 {
+.button-7, .button-8, .button-9, .button-21, .button-22, .button-23, .button-24, .button-25, .button-43, .button-44, .button-45, .button-46,
+.button-47, .button-48, .button-49 {
 	bottom: 21px;
 }
 
-.button-6 {
+.button-6, .button-20, .button-42 {
 	bottom: 21px;
 	height: 85px;
 }
 
-.button-10 {
+.button-10, .button-26, .button-50 {
 	top: -61px;
 	height: 85px;
 }
